# TestGame

./: .gitignore  CMakeLists.txt
dependencies/SFML/lib/: sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network.lib  sfml-system-d.lib  sfml-system.lib  sfml-window-d.lib  sfml-window.lib
source/: main.cpp
source/Game/Components/: CellComponent.cpp  CellComponent.hpp  FieldManager.cpp  FieldManager.hpp
source/Render/: RenderInfo.cpp  RenderInfo.hpp  Renderer.cpp  Renderer.hpp
source/Resource/: FontResource.hpp  ResourceManager.cpp  ResourceManager.hpp  TextureResource.hpp
source/Scene/: GameObject.cpp  GameObject.hpp  InputManager.cpp  InputManager.hpp  Scene.cpp  Scene.hpp
source/Scene/Components/: ButtonComponent.cpp  ButtonComponent.hpp  ClickComponent.cpp  ClickComponent.hpp  ObjectComponent.cpp  ObjectComponent.hpp  RenderPriority.cpp  RenderPriority.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TextComponent.cpp  TextComponent.hpp
source/Utils/: JsonHelper.cpp  JsonHelper.hpp
source/Utils/rapidjson/: allocators.h  cursorstreamwrapper.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
source/Utils/rapidjson/error/: en.h  error.h
source/Utils/rapidjson/internal/: biginteger.h  clzll.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
(+6 files in other folders)
